# faststream-redis-timers

./: .dockerignore  .gitignore  CLAUDE.md  Justfile  LICENSE  README.md  architecture.md  context7.json  mkdocs.yml  pyproject.toml
.github/workflows/: _checks.yml  ci.yml  release.yml
architecture/: README.md  delivery.md  fake-broker.md  glossary.md  scheduling.md  timer-store.md  wire-format.md
docs/: CNAME  index.md
docs/introduction/: how-it-works.md  installation.md
docs/superpowers/plans/: 2026-06-29-python-3.11-3.12-support.md
docs/superpowers/specs/: 2026-06-29-python-3.11-3.12-support-design.md
docs/usage/: basic.md  publisher.md  router.md  subscriber.md  testing.md
faststream_redis_timers/: __init__.py  broker.py  configs.py  envelope.py  message.py  registrator.py  response.py  router.py  schemas.py  store.py  testing.py
faststream_redis_timers/parser/: parser.py
faststream_redis_timers/publisher/: config.py  factory.py  producer.py  usecase.py
faststream_redis_timers/subscriber/: config.py  factory.py  lua.py  schedule.py  usecase.py
planning/: README.md  deferred.md
planning/changes/2026-06-03.01-faststream-0.7-migration/: design.md  plan.md
planning/changes/2026-06-04.01-faststream-0.7.1-testbroker-typing/: design.md  plan.md
planning/changes/2026-06-09.01-mkdocs-gh-actions/: design.md  plan.md
planning/changes/2026-06-26.01-timer-store/: design.md  plan.md
planning/changes/2026-06-26.02-poll-schedule/: design.md  plan.md
planning/decisions/: 2026-06-26-reject-fake-broker-inmemory-store.md  2026-06-27-keep-construction-factories.md
planning/plans/: 2026-06-03-faststream-0.7-migration-pr1-plan.md  2026-06-03-faststream-0.7-migration-pr2-plan.md
planning/releases/: 0.3.2.md  0.4.0.md  0.4.1.md
planning/specs/: 2026-06-03-faststream-0.7-migration-design.md  2026-06-04-faststream-0.7.1-testbroker-typing-design.md  2026-06-09-mkdocs-gh-actions-design.md
test_faststream_redis_timers/: test_main.py
tests/: conftest.py  test_at_least_once.py  test_cancel.py  test_concurrency.py  test_delivery.py  test_envelope.py  test_fake.py  test_inspection.py  test_isolation.py  test_publish_api.py  test_unit.py
