[project]
name = "faststream-redis-timers"
description = "FastStream broker integration for Redis-backed distributed timer scheduling"
readme = "README.md"
requires-python = ">=3.13,<4"
license = "MIT"
version = "0.1.0"

dependencies = [
    "faststream~=0.6",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
lint = [
    "ruff",
    "ty",
    "eof-fixer",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "FBT",
    "TRY003",
    "EM102",
    "D203",
    "D212",
    "COM812",
    "ISC001",
    "G004",
    "ANN",
    "PLR2004",
]
isort.lines-after-imports = 2

[tool.ruff.lint.extend-per-file-ignores]
"test_faststream_redis_timers/*.py" = [
    "S101",
    "PLR2004",
]

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
