[project]
name = "faststream-redis-timers"
version="0"
description = "FastStream integration for Redis-backed distributed timer scheduling"
authors = [
    { name = "Artur Shiriev", email = "me@shiriev.ru" },
]
readme = "README.md"
requires-python = ">=3.13,<4"
license = "MIT"
keywords = ["faststream", "redis", "scheduler", "timers", "distributed", "messaging", "asyncio", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "faststream>=0.7.1,<0.8",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
lint = [
    "ruff",
    "ty",
    "eof-fixer",
    "types-redis",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "faststream_redis_timers"
module-root = ""

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1", # allow missing docstrings
    "FBT", # allow boolean args
    "TRY003", # allow long exception messages
    "EM102", # allow f-string for exception message
    "D203", # "one-blank-line-before-class" conflicting with D211
    "D212", # "multi-line-summary-second-line" conflicting with D213
    "COM812", # flake8-commas "Trailing comma missing"
    "ISC001", # flake8-implicit-str-concat
    "G004", # Logging statement uses f-string
    "ANN",
]
isort.lines-after-imports = 2
isort.no-lines-before = ["standard-library", "local-folder"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "S101", # allow asserts
    "PLR2004", # allow magic values
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term-missing --cov-fail-under=100"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.urls]
Homepage = "https://faststream-redis-timers.modern-python.org"
Documentation = "https://faststream-redis-timers.modern-python.org"
Repository = "https://github.com/modern-python/faststream-redis-timers"
Issues = "https://github.com/modern-python/faststream-redis-timers/issues"
Changelog = "https://github.com/modern-python/faststream-redis-timers/releases"

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
